# bevy-websocket-adapter

./: .gitignore  Cargo.toml  README.md
examples/: bevy_client.rs  bevy_network_events.rs  bevy_ping_pong.rs  bevy_server.rs
src/: lib.rs
src/bevy/: plugin_client.rs  plugin_server.rs  shared.rs
src/client/: ws_client.rs
src/server/: ws_handler.rs
src/shared/: event.rs  handle.rs  mod.rs  resources.rs  router.rs
