[package]
name = "bevy_websocket_adapter"
version = "0.1.5"
authors = ["Germain GAU <germain.gau@gmail.com>"]
edition = "2021"
description = "Simple adapter to receive WebSocket messages in your bevy games as native Rust types."
documentation = "https://docs.rs/bevy-websocket-adapter"
readme = "README.md"
homepage = "https://github.com/Xide/bevy-websocket-adapter"
repository = "https://github.com/Xide/bevy-websocket-adapter"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "websocket"]
categories = ["network-programming", "game-development", "web-programming::websocket"]
publish = true

[features]
default = ["bevy-plugin", "server", "client"]
bevy-plugin = ["bevy"]
server = ["tracing"]
client = ["tracing"]

[dependencies]
tungstenite = { version = "0.17.2", default-features = false }
tokio-tungstenite = "0.17.1"
tokio = { version = "1.17.0", default-features = false, features = ["net", "io-util", "sync", "rt-multi-thread"] }
crossbeam-channel = "0.5.4"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
futures-util = { version = "0.3.21", default-features = false, features = ["async-await", "sink", "std"] }
anyhow = "1.0.56"
thiserror = "1.0.30"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["raw_value"] }
futures = "0.3.21"
url = "2.2.2"
tracing = { version = "0.1.32", optional = true }

[dependencies.bevy]
version = "0.6.0"
default-features = false
features = []
optional = true

